# MyGameStory

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
config/: platforms.json  schema_version.json  taxonomies.json
data/derived/: backlog_stats.csv  category_stats.csv  games_flat.csv
data/imports/ocr/: .gitkeep
data/manual/: aliases.jsonl  classifications.jsonl  games.jsonl  name_resolution.jsonl  tags.json
data/snapshots/: steam_owned_snapshot.jsonl
data/suggestions/: pending_review.jsonl  unresolved_names.jsonl
docs/: classification_workflow.zh-CN.md
scripts/: apply_confirmed_classifications.py  build_views.py  edit_classification.py  export_steam_owned.py  import_classification_json.py  import_classification_text.py  import_screenshot_ocr.py  import_steam_achievements.py  import_steam_owned.py  import_steam_recent.py  report_stats.py  resolve_names.py  scan_steam_installed.py  steam_api.local.example.json  update_steam_library.py  validate_data.py  vaultlib.py
tests/: test_build_views.py  test_edit_classification.py  test_report_stats.py  test_update_steam_library.py  test_validate_data.py
