[project]
name = "MyGameStory"
version = "0.1.0"
description = "Local, auditable Steam game library data project."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
ocr = ["pytesseract>=0.3.10", "Pillow>=10.0"]
analysis = ["pyarrow>=15.0", "pandas>=2.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
